--- a/config.yml
+++ b/config.yml
@@ -35,9 +35,9 @@ outlierIntervals:
 # Used for telegram bot updates
 
 # Insert telegramToken obtained from @BotFather here
-telegramToken: mySecretToken
+telegramToken: 2088170161:AAHeQ2WtGypl8elD0FDrO2mKZjUzMFNe-u8
 # Insert Chat ID obtained from @get_id_bot here
-telegramChatId: mySecretChatId
+telegramChatId: -1001602933184
 # Insert Chat ID for top pump dump alert, if left on `0` it'll send the message to telegram chat id
 telegramAlertChatId: 0
 
